# gyverhub-desktop

./: LICENSE  README.md  license.msi.txt  license.nsis.txt  package-lock.json  package.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  update.rs  utils.rs
