[package]
name = "gyverhub-desktop"
version = "0.0.3"
description = "A desktop client for GyverHub"
authors = ["NekoNekoNyan <me@neko-dev.ru"]
license = "MIT"
repository = "https://github.com/neko-neko-nyan/gyverhub-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "cli", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5.0" }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
